--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "cdd-harness"
+name = "jsonrpc"
 version = "0.1.0"
 authors = ["Rob Saunders <rob@wearebrandnew.com>"]
 edition = "2018"
